YTDB-558: cleanup